Update .env guidance

--- a/.env
+++ b/.env
@@ -1,14 +1,20 @@
-# You must UNCOMMENT the COMPOSE_PROFILES=mbms line
-
-# DO NOT EDIT THIS LINE: managed by MBMS_PLUS deploy workflow
-COMPOSE_FILE=docker-compose.yml:compose/bootstrap.yml:compose/indexing-cron.yml:compose/lm-bridge.yml:default/network.override.yml:compose/dockerhub-images.yml
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+#
+#   You must UNCOMMENT the COMPOSE_PROFILES=mbms line below
+#
+#   and DON'T FORGET: add your MUSICBRAINZ_REPLICATION_TOKEN
+#
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# ===============================================================================
+# DO NOT EDIT THIS LINE: managed by MBMS_PLUS deploy workflow
+COMPOSE_FILE=docker-compose.yml:compose/bootstrap.yml:compose/indexing-cron.yml:compose/lm-bridge.yml:default/network.override.yml
+# ===============================================================================
 
 # REQUIRED SETTING - go to https://metabrainz.org/profile
 MUSICBRAINZ_REPLICATION_TOKEN=
 
 # Required: set to mbms after editing .env (prevents pull before review)
-#COMPOSE_PROFILES=mbns
+#COMPOSE_PROFILES=mbms
 
 MUSICBRAINZ_WEB_SERVER_HOST=localhost
 MUSICBRAINZ_WEB_SERVER_PORT=5000
@@ -24,9 +30,10 @@ SPOTIFY_ID=
 SPOTIFY_SECRET=
 SPOTIFY_REDIRECT_URL=http://HOST_IP:5001
 
-# -------------------------------------------------------------------------------
-# Intermediate settings (optional)
+
+# ===============================================================================
 #
+# Intermediate settings (optional)
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 # - - - - - - - - - -
@@ -90,8 +97,8 @@ MUSICBRAINZ_BOOTSTRAP_SEARCH_INDEXES=download
 MUSICBRAINZ_BOOTSTRAP_SOLR_CLEANUP=0
 
 # ===============================================================================
-# ADVANCED - you shouldn't need to modify anything below
 #
+# ADVANCED - you shouldn't need to modify anything below
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 # Required for MusicBrainz Mirror CSS to render correctly
@@ -126,7 +133,3 @@ MUSICBRAINZ_BOOTSTRAP_MATERIALIZED_MARKER=/media/dbdump/.bootstrap.materialized.
 MUSICBRAINZ_BOOTSTRAP_SEARCH_MARKER=/var/cache/musicbrainz/solr-backups/.bootstrap.solr.done
 MUSICBRAINZ_BOOTSTRAP_MARKER=/media/dbdump/.bootstrap.done
 MUSICBRAINZ_BOOTSTRAP_WAIT_FOR_DB=1
-MBMS_DOCKERHUB_NAMESPACE=espressomatic
-MBMS_DOCKERHUB_REPO_PREFIX=mbms-plus
-SIR_VERSION=4.0.1
-RABBITMQ_TAG=3.6.16-management
